src/test/deca/context/invalid/provided/testi37.deca
//Resultats :
//Erreur contextuelle
//Ligne 11 : can't call a method in main without a class behind
class A{
    protected int x;
    int getX(){
        return x;
    }
}
{
    int y = getX();
}
